@@ -63,10 +63,7 @@ import javax.swing.JSplitPane;
 import javax.swing.JTextPane;
 import javax.swing.JToolBar;
 import javax.swing.ListSelectionModel;
-import javax.swing.LookAndFeel;
 import javax.swing.SwingUtilities;
-import javax.swing.UIManager;
-import javax.swing.text.JTextComponent;
 
 
 import java.awt.*;
@@ -634,14 +631,35 @@ public class GUIUtilities
 	 * @param args Positional parameters to be substituted into the
 	 * message text
 	 */
-	public static void message(Component comp, String name, Object[] args)
+	public static void message(final Component comp, final String name, final Object[] args)
 	{
-		hideSplashScreen();
-
-		JOptionPane.showMessageDialog(comp,
-			jEdit.getProperty(name.concat(".message"),args),
-			jEdit.getProperty(name.concat(".title"),args),
-			JOptionPane.INFORMATION_MESSAGE);
+		if (EventQueue.isDispatchThread())
+		{
+			hideSplashScreen();
+	
+			JOptionPane.showMessageDialog(comp,
+				jEdit.getProperty(name.concat(".message"),args),
+				jEdit.getProperty(name.concat(".title"),args),
+				JOptionPane.INFORMATION_MESSAGE);
+		}
+                else 
+                {
+                        try
+                        {
+                            EventQueue.invokeAndWait(new Runnable()
+                            {
+                                    @Override
+                                    public void run()
+                                    {
+                                            message(comp, name, args);
+                                    }
+                            });
+                        }
+                        catch (Exception e)
+                        {
+                            // ignored
+                        }
+                }
 	} //}}}
 
 	//{{{ error() method
@@ -657,14 +675,35 @@ public class GUIUtilities
 	 * @param args Positional parameters to be substituted into the
 	 * message text
 	 */
-	public static void error(Component comp, String name, Object[] args)
+	public static void error(final Component comp, final String name, final Object[] args)
 	{
-		hideSplashScreen();
-
-		JOptionPane.showMessageDialog(comp,
-			jEdit.getProperty(name.concat(".message"),args),
-			jEdit.getProperty(name.concat(".title"),args),
-			JOptionPane.ERROR_MESSAGE);
+		if (EventQueue.isDispatchThread())
+		{
+			hideSplashScreen();
+	
+			JOptionPane.showMessageDialog(comp,
+				jEdit.getProperty(name.concat(".message"),args),
+				jEdit.getProperty(name.concat(".title"),args),
+				JOptionPane.ERROR_MESSAGE);
+		}
+                else 
+                {
+                        try
+                        {
+                                EventQueue.invokeAndWait(new Runnable()
+                                {
+                                        @Override
+                                        public void run()
+                                        {
+                                                error(comp, name, args);
+                                        }
+                                });
+                        }
+                        catch (Exception e)
+                        {
+                                // ignored
+                        }
+                }
 	} //}}}
 
 	//{{{ input() method
@@ -711,16 +750,36 @@ public class GUIUtilities
 	 * message text
 	 * @since jEdit 3.1pre3
 	 */
-	public static String input(Component comp, String name,
-		Object[] args, Object def)
+	public static String input(final Component comp, final String name,
+		final Object[] args, final Object def)
 	{
-		hideSplashScreen();
-
-		String retVal = (String)JOptionPane.showInputDialog(comp,
-			jEdit.getProperty(name.concat(".message"),args),
-			jEdit.getProperty(name.concat(".title")),
-			JOptionPane.QUESTION_MESSAGE,null,null,def);
-		return retVal;
+		if (EventQueue.isDispatchThread())
+		{
+			hideSplashScreen();
+	
+			return (String)JOptionPane.showInputDialog(comp,
+				jEdit.getProperty(name.concat(".message"),args),
+				jEdit.getProperty(name.concat(".title")),
+				JOptionPane.QUESTION_MESSAGE,null,null,def);
+		}
+		final String[] retValue = new String[1];
+		try
+		{
+			EventQueue.invokeAndWait(new Runnable()
+			{
+				@Override
+				public void run()
+				{
+					retValue[0] = input(comp, name, args, def);
+				}
+			});
+		}
+		catch (Exception e)
+		{
+			return null;
+		}
+		return retValue[0];
+		
 	} //}}}
 
 	//{{{ inputProperty() method
@@ -736,19 +795,40 @@ public class GUIUtilities
 	 * @param def The property whose text to display in the input field
 	 * @since jEdit 3.1pre3
 	 */
-	public static String inputProperty(Component comp, String name,
-		Object[] args, String def)
+	public static String inputProperty(final Component comp, final String name,
+		final Object[] args, final String def)
 	{
-		hideSplashScreen();
-
-		String retVal = (String)JOptionPane.showInputDialog(comp,
-			jEdit.getProperty(name.concat(".message"),args),
-			jEdit.getProperty(name.concat(".title")),
-			JOptionPane.QUESTION_MESSAGE,
-			null,null,jEdit.getProperty(def));
-		if(retVal != null)
-			jEdit.setProperty(def,retVal);
-		return retVal;
+		if (EventQueue.isDispatchThread())
+		{
+			hideSplashScreen();
+	
+			String retVal = (String)JOptionPane.showInputDialog(comp,
+				jEdit.getProperty(name.concat(".message"),args),
+				jEdit.getProperty(name.concat(".title")),
+				JOptionPane.QUESTION_MESSAGE,
+				null,null,jEdit.getProperty(def));
+			if(retVal != null)
+				jEdit.setProperty(def,retVal);
+			return retVal;
+		}
+		final String[] retValue = new String[1];
+		try
+		{
+			EventQueue.invokeAndWait(new Runnable()
+			{
+				@Override
+				public void run()
+				{
+					retValue[0] = inputProperty(comp, name, args, def);
+				}
+			});
+		}
+		catch (Exception e)
+		{
+			return null;
+		}
+		return retValue[0];
+		
 	} //}}}
 
 	//{{{ confirm() method
@@ -860,22 +940,43 @@ public class GUIUtilities
 	 * @return an integer indicating the option selected by the user
 	 * @since jEdit 4.3pre1
 	 */
-	public static int listConfirm(Component comp, String name, String[] args,
-		Object[] listModel)
+	public static int listConfirm(final Component comp, final String name, final String[] args,
+		final Object[] listModel)
 	{
-		JList list = new JList(listModel);
-		list.setVisibleRowCount(8);
-
-		Object[] message = {
-			jEdit.getProperty(name + ".message",args),
-			new JScrollPane(list)
-		};
-
-		return JOptionPane.showConfirmDialog(comp,
-			message,
-			jEdit.getProperty(name + ".title"),
-			JOptionPane.YES_NO_OPTION,
-			JOptionPane.QUESTION_MESSAGE);
+		if (EventQueue.isDispatchThread())
+		{
+			JList list = new JList(listModel);
+			list.setVisibleRowCount(8);
+	
+			Object[] message = {
+				jEdit.getProperty(name + ".message",args),
+				new JScrollPane(list)
+			};
+	
+			return JOptionPane.showConfirmDialog(comp,
+				message,
+				jEdit.getProperty(name + ".title"),
+				JOptionPane.YES_NO_OPTION,
+				JOptionPane.QUESTION_MESSAGE);
+		}
+		final int [] retValue = new int[1];
+		try
+		{
+			EventQueue.invokeAndWait(new Runnable()
+			{
+				@Override
+				public void run()
+				{
+					retValue[0] = listConfirm(comp, name, args, listModel);
+				}
+			});
+		}
+		catch (Exception e)
+		{
+			return JOptionPane.CANCEL_OPTION;
+		}
+		return retValue[0];
+		
 	} //}}}
 
 	//{{{ listConfirm() method
@@ -894,27 +995,49 @@ public class GUIUtilities
 	 * @return an integer indicating the option selected by the user
 	 * @since jEdit 4.3pre12
 	 */
-	public static int listConfirm(Component comp, String name, String[] args,
-		Object[] listModel, List selectedItems)
+	public static int listConfirm(final Component comp, final String name, final String[] args,
+		final Object[] listModel, final List selectedItems)
 	{
-		JList list = new JList(listModel);
-		list.setSelectionMode(ListSelectionModel.MULTIPLE_INTERVAL_SELECTION);
-		list.setVisibleRowCount(8);
-		list.addSelectionInterval(0,listModel.length - 1);
-
-		Object[] message = {
-			jEdit.getProperty(name + ".message",args),
-			new JScrollPane(list)
-		};
-
-		int ret = JOptionPane.showConfirmDialog(comp,
-							message,
-							jEdit.getProperty(name + ".title"),
-							JOptionPane.YES_NO_OPTION,
-							JOptionPane.QUESTION_MESSAGE);
-		Object[] selectedValues = list.getSelectedValues();
-		selectedItems.addAll(Arrays.asList(selectedValues));
-		return ret;
+		
+		if (EventQueue.isDispatchThread())
+		{
+			JList list = new JList(listModel);
+			list.setSelectionMode(ListSelectionModel.MULTIPLE_INTERVAL_SELECTION);
+			list.setVisibleRowCount(8);
+			list.addSelectionInterval(0,listModel.length - 1);
+	
+			Object[] message = {
+				jEdit.getProperty(name + ".message",args),
+				new JScrollPane(list)
+			};
+	
+			int ret = JOptionPane.showConfirmDialog(comp,
+								message,
+								jEdit.getProperty(name + ".title"),
+								JOptionPane.YES_NO_OPTION,
+								JOptionPane.QUESTION_MESSAGE);
+			Object[] selectedValues = list.getSelectedValues();
+			selectedItems.addAll(Arrays.asList(selectedValues));
+			return ret;
+		}
+		final int [] retValue = new int[1];
+		try
+		{
+			EventQueue.invokeAndWait(new Runnable()
+			{
+				@Override
+				public void run()
+				{
+					retValue[0] = listConfirm(comp, name, args, listModel, selectedItems);
+				}
+			});
+		}
+		catch (Exception e)
+		{
+			return JOptionPane.CANCEL_OPTION;
+		}
+		return retValue[0];
+		
 	} //}}}
 
 	//{{{ showVFSFileDialog() methods
